DB connection applied and some logger also applied

--- a/Villa/appsettings.json
+++ b/Villa/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "VillaConnectionStrings": "Server=LTIN144091\\SQLEXPRESS;Database=Villa_API;Trusted_Connection=True;TrustServerCertificate=true" }
 }
